2013-01-16  Sergey Kashyrin <ska@kiska.net>

   * fileio.c : Fix problem to rewrite INDEXED (VBISAM) record with alternate key.

2012-10-26  Sergey Kashyrin <ska@kiska.net>

   * intrinsic.c : cob_intr_integer was crashing on large-scale numbers.

2012-10-24  Sergey Kashyrin <ska@kiska.net>

   * intrinsic.c : Prevent cob_intr_binop to use double (float) and loose precision (bug #37).

2012-10-23  Sergey Kashyrin <ska@kiska.net>

   * fileio.c : Prevent runtime crash when ASSIGN is missing in SELECT FILE.
                (well, it's better to fix the parser to give an error, but meanwhile...)

2012-08-30  Luke Bryan <lukebryan@bdumail.com>

   * screenio.c : Added for extended Accept: 
                      Tab = 2007 return code. 
                      Back tab = 2008 return code. 
                      Insert key (the default is on). 
                      Delete key. 
                  Enhanced for extended Accept: 
                      End key to end of data (was end of field). 
                      Backspace key moves remainder left (inserts space at end or 0 for numerics). 

2012-07-12  Sergey Kashyrin <ska@kiska.net>

   * numeric.c : cob_add_packed bug fix.
                 http://www.opencobol.org/modules/newbb/viewtopic.php?topic_id=1487&forum=1
                 SUBTRACT int FROM PIC S9(n)V9(m) COMP-3 was giving wrong negative result

2012-06-26  Sergey Kashyrin <ska@kiska.net>

   * numeric.c : cob_display_add_int bug fixed.
                 ADD 1 TO PIC S9(n)V9(m) VALUE -0.1 was giving wrong result

2010-11-29  Sergey Kashyrin <ska@kiska.net>

   * numeric.c : cob_add_packed bug fixed.
                 http://www.opencobol.org/modules/newbb/viewtopic.php?topic_id=1185&forum=1
                 "Bug in ADD and -std=ibm or std=mf caused by binary-truncate:no"

2010-09-03  human

   * screenio.c : Convert keys according to used environment
                  for identical behaviour
                  (especially fix for PDCurses + numpad support)
